# plasma-modeling

./: Cargo.toml  README.md
examples/: simple.rs
src/: fields.rs  integrals.rs  lib.rs  polynomial.rs  tables.rs  util.rs
