[package]
name = "fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }
matrixmultiply = "0.3.2"
nalgebra = "0.31.0"
num-traits = "0.2.15"
once_cell = "1.13.0"
# polynomial = "0.2.4"
rand = { version = "0.8.5", features = ["small_rng"] }
smallvec = { version = "1.9.0", features = ["const_new", "const_generics"] }
