[package]
name = "fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
diffeq = "0.1.0"
dioxus = { version = "0.2.4", features = ["desktop"] }
matrixmultiply = "0.3.2"
nalgebra = "0.31.0"
num-traits = "0.2.15"
once_cell = "1.13.0"
integrals = { git = "https://github.com/jkelleyrtp/integrals.git", branch = "master" }
# polynomial = "0.2.4"
rand = { version = "0.8.5", features = ["small_rng"] }
smallvec = { version = "1.9.0", features = ["const_new", "const_generics"] }
tabled = "0.8.0"
prettytable-rs = "0.9.0"
